# simple-rag

./: .env  .gitignore  PROJECT_OVERVIEW.md  SUPABASE_MIGRATION.md  TODO.md  env.example  pyproject.toml  test_direct_api.py  test_query_api.py  test_session_performance.py  test_upload.ipynb
api_server/: main.py
backend_v2/: main.py
docs/: storage_bucket_migration.md  storage_performance_analysis.md
examples/: api_client_example.py  async_api_client.py  basic_usage.py  file_processing.py  mcp_usage.py
frontend/: package-lock.json  package.json
frontend/src/components/: DocumentManager.js  index.js
frontend/src/pages/: _app.js  index.js
frontend/src/services/: api.js
frontend/src/styles/: globals.css
mcp_server/: __init__.py  main.py  server.py
rag_core/: __init__.py
rag_core/config/: __init__.py  models.py  supabase_config.py
rag_core/pipeline/: __init__.py  simple_rag.py  supabase_rag.py
rag_core/utils/: __init__.py  file_processor.py  hybrid_storage.py  logger.py  text_splitter.py
scripts/: init_supabase.sql  setup_supabase.py
